# Shoppingify-server

./: .gitignore  docker-compose.yml  pyproject.toml
app/: database.py  main.py
app/routers/: category.py
