[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Elie  <elie.pernet@orange.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.18.1"
peewee = "^3.15.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
